--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -5,6 +5,11 @@ if [[ ! -x $(command -v brew) ]]; then
   sh -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
 fi
 
+if [[ ! -d ~/.oh-my-zsh ]]; then
+  echo "Installing Oh My Zsh..."
+  sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+fi
+
 # hash: {{ include "dot_Brewfile" | sha256sum }}
 echo "Installing Homebrew packages..."
 brew bundle --global --cleanup
