Enable git autostash

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,11 +1,14 @@
 [core]
-	excludesfile = ~/.gitignore
+  excludesfile = ~/.gitignore
 
 [commit]
-	gpgsign = true
+  gpgsign = true
 
 [pull]
-	rebase = true
+  rebase = true
+
+[rebase]
+  autoStash = true
 
 [help]
-	autocorrect = 10
+  autocorrect = 10
