Sign tags by default

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -8,11 +8,14 @@
 [commit]
   gpgsign = true
 
+[tag]
+  gpgsign = true
+
 [pull]
   rebase = true
 
 [rebase]
-  autoStash = true
+  autostash = true
 
 [help]
   autocorrect = 10
