Sign commits with SSH keys

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,9 +1,13 @@
 [user]
   name = {{ .name }}
-  email = {{ .email }}
+  email = {{ (onepasswordItemFields "GitHub SSH Signing Key" "Private" "my").email.value }}
+  signingkey = {{ (onepasswordDetailsFields "GitHub SSH Signing Key" "Private" "my").public_key.value }}
 
 [core]
   excludesfile = ~/.gitignore
+
+[gpg]
+  format = ssh
 
 [commit]
   gpgsign = true
