--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -9,6 +9,9 @@
 [gpg]
   format = ssh
 
+[gpg "ssh"]
+  program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+
 [commit]
   gpgsign = true
 
