--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,20 +1,10 @@
 #!/usr/bin/env bash
 
-if [[ ! -x $(command -v brew) ]]; then
-  echo "Installing Homebrew..."
-  sh -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-fi
-
-if [[ ! -d ~/.oh-my-zsh ]]; then
-  echo "Installing Oh My Zsh..."
-  sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-fi
-
 # hash: {{ include "dot_Brewfile" | sha256sum }}
 echo "Installing Homebrew packages..."
 brew bundle --global --cleanup
 
-if [[ ! -S /var/run/docker.sock ]]; then
+if [[ ! -f /Library/LaunchDaemons/com.github.containers.podman.helper-$USER.plist ]]; then
   echo "Installing Podman helper..."
   sudo podman-mac-helper install
 fi
