Add git commit message template

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,6 +13,7 @@
   program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
 
 [commit]
+  template = {{ .chezmoi.homeDir }}/.gitmessage
   gpgsign = true
 
 [tag]
